ios: add discovering devices

--- a/ios/QSmartFashion/QSmartFashion/Info.plist
+++ b/ios/QSmartFashion/QSmartFashion/Info.plist
@@ -41,5 +41,9 @@
 	</dict>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+	</array>
 </dict>
 </plist>
